# bottlecaps_detection

./: .gitignore  Dockerfile  LICENSE  README.dataset.txt  README.md  README.roboflow.txt  building model.ipynb  data.yaml  model development and experimentation.ipynb  model_development_and_experimentation.ipynb  pyproject.toml
.github/workflows/: ci.yml
Bottle-Caps-Detection/cli_train_run/: args.yaml  results.csv
Bottle-Caps-Detection/cli_train_run1/: args.yaml  results.csv
Bottle-Caps-Detection/cli_train_run2/: args.yaml  results.csv
Bottle-Caps-Detection/cli_train_run3/: args.yaml  results.csv
Bottle-Caps-Detection/cli_train_run4/: args.yaml  results.csv
Bottle-Caps-Detection/cli_train_run42/: args.yaml  results.csv
Bottle-Caps-Detection/run2/: args.yaml
Bottle-Caps-Detection/run22/: args.yaml  results.csv
Bottle-Caps-Detection/run3/: args.yaml  results.csv
Bottle-Caps-Detection/run4/: args.yaml  results.csv
configs/: config.yaml  settings.yaml
scr/bsort/: bsort.py  cli.py  infer.py  main.py  train.py
src/bsort/: main.py
src/bsort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: data_dummy.yaml  test_infer.py  test_main.py  test_train.py
train/labels/: raw-250110_dc_s001_b2_15_jpg.rf.4a6d79fd97fb01410a681e7eaa791143.txt  raw-250110_dc_s001_b2_15_jpg.rf.50d5736896efe339131736857c37e645.txt  raw-250110_dc_s001_b2_15_jpg.rf.d5ccb11e12171ce6f4ff4ce930c285d4.txt  raw-250110_dc_s001_b2_1_jpg.rf.1f1bbc95eadb4b2dcedc479327c2889e.txt  raw-250110_dc_s001_b2_1_jpg.rf.75adefd64ce8d75b2f9c1e49f779c927.txt  (+24 more)
(+26 files in other folders)
